[package]
name = "rock-paper-scissors"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = "0.15.0"
async-graphql = { version = "7.0.17", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rock_paper_scissors_contract"
path = "src/contract.rs"

[[bin]]
name = "rock_paper_scissors_service"
path = "src/service.rs"
